Wed Oct  3 02:23:37 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* error.c (exc_to_s, name_err_to_s, name_err_mesg_to_str): do not
	  taint messages.

Tue Oct  2 16:47:06 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (identity_hash_new): hide internal hashes for refinements.

	* eval.c (rb_mod_refine): no default value.

Mon Oct  1 22:54:02 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (identity_hash_new): new function to create a new identity
	  hash.

	* eval.c (rb_overlay_module, rb_mod_using, rb_mod_refine): use
	  identity_hash_new().

Mon Oct  1 02:34:53 2012  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in (--with-opt-dir): Make this also work on DLDFLAGS
	  so LIBRUBY_SO links fine with libexecinfo installed in a
	  non-system directory.

Sun Sep 30 23:32:00 2012  Kenta Murata  <mrkn@mrkn.jp>

	* vm_dump.c (rb_vm_bugreport): add /Library/Logs/DiagnosticReports
	  in the list of locations of crash reports.

Sun Sep 30 21:18:03 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_concat): use memcpy to copy a string which contains
	  NUL characters. [ruby-core:47751] [Bug #7090]

Sat Sep 29 19:41:53 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/ruby/envutil.rb (EnvUtil#invoke_ruby): kill child process
	  before Timeout::Error is raised. rmdir of mktmpdir fails with
	  EACCES if child process is alive on Windows.

	* test/thread/test_queue.rb (TestQueue): increase timeout.
	  This test takes long time on Windows XP.

Sat Sep 29 19:41:33 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/net/http/test_http.rb (TestNetHTTP#test_proxy_address):
	  clear environment variables. If http_proxy environment variable was
	  set, the test failed.

	* test/net/http/test_http.rb (TestNetHTTP#test_proxy_port): ditto.

Sat Sep 29 19:41:11 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/drb/drbtest.rb (DRbCore#teardown):
	  Use Process.kill :KILL on Windows because Process.kill :INT silently